Improving check for duplicate csv lines.