@@ -70,19 +70,16 @@ public class SystemParticipantResultFactory extends ResultEntityFactory<SystemPa
   protected List<Set<String>> getFields(Class<?> entityClass) {
     /// all result models have the same constructor except StorageResult
     Set<String> minConstructorParams = newSet(TIME, INPUT_MODEL, POWER, REACTIVE_POWER);
-    Set<String> optionalFields = expandSet(minConstructorParams, ENTITY_UUID);
 
     if (entityClass.equals(StorageResult.class) || entityClass.equals(EvResult.class)) {
       minConstructorParams = newSet(TIME, INPUT_MODEL, POWER, REACTIVE_POWER, SOC);
-      optionalFields = expandSet(minConstructorParams, ENTITY_UUID);
     }
 
     if (SystemParticipantWithHeatResult.class.isAssignableFrom(entityClass)) {
       minConstructorParams = expandSet(minConstructorParams, Q_DOT);
-      optionalFields = expandSet(minConstructorParams, ENTITY_UUID);
     }
 
-    return Arrays.asList(minConstructorParams, optionalFields);
+    return List.of(minConstructorParams);
   }
 
   @Override
